--- a/main/templates/test.html
+++ b/main/templates/test.html
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col">
             <select name= "project_key">
-                    <option value="SD701XR">프로젝트를 선택하세요</option>
+                    <option value="SD701XR">프로젝트를 선택하세요.</option>
                     <option value="SD803XQ">[SDK]TCC701x_RTOS_MCU</option>
                     <option value="SD805XA2">[SDK]TCC803x_QNX_Cluster</option>
                     <option value="SD805XA3">[SDK]TCC805x_Android10_IVI</option>
